2008-08-27  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* lib/python/vasputil/supercell.py: Change to use list of atomic
	symbols.
	(add): New method.
	(sortAtoms): New method.
	(getAtomSymbolCount): New method.
	(write_poscar): Make format match VASP.
	(write_xyz): Make format match OpenBabel.

2008-08-26  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* bin/vasputil_interpolate: New file.
	* bin/interpolate4.in: Remove.
	* bin/Makefile.am: Remove reference to interpolate4.in
	* setup.py: Add bin/vasputil_interpolate to scripts.

2008-08-25  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* lib/python/vasputil/{__init__.py,dosplot.py,supercell.py}: New
	files.
	* bin/dosplot_example: New file.
	* setup.py: New file.
	* Makefile.am: Install python scripts via distutils.
	* configure.ac: Call AM_PATH_PYTHON.

2008-08-20  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* src/supercell_modify.f90 (unnormalize): Fix unnormalization when
	coordinate is < 0.5.

2008-08-07  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* config/acx_subst_fcflags.m4: More checking for ifort, use f2003 mode
	for gfortran, allow gfortran to be called gfortran*.
	* config/acx_fc_command_line.m4: New file, autoconf macro for checking
	command line support. Copied from octopus (tddft.org).
	* configure.ac: Run ACX_FC_COMMAND_LINE_ARGUMENTS macro, new contact
	info.
	* src/f2kcli.f90: Delete.
	* src/vasputil.f90: Rename to vasputil.F90.
	* src/vasputil.F90: Use results of acx_fc_command_line_arguments macro
	to call correct procedures for getting command line arguments.
	* src/Makefile.am: Remove f2kcli.f90, change to vasputil.F90.
	* src/config.h.in: Regenerate.
	* src/Makefile.in: Regenerate.
	* bin/Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* src/depend.mk: Regenerate.
	* src/{*.f90,*.F90}: Change licence to GPLv3
	* COPYING: Change to GPLv3.

2008-02-27  Janne Blomqvist  <job@fyslab.hut.fi>
